removed fixed height to prevent overflowing of boxes

--- a/templates/stylesheets/base.sass
+++ b/templates/stylesheets/base.sass
@@ -86,7 +86,6 @@ a, a:visited
   position: relative
   float: left
   width: 360px
-  height: 250px
   margin-right: 40px
   margin-bottom: 20px
   min-height: 220px
